--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
    <head>
         <meta charset=''utf-8''>
         <meta name=''viewport'' content=width-device-width,initial-scale=1.0>
+        <link rel="shortcut icon" href=https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Fbr%2Ficone-gratis%2Ffutebol_893831&psig=AOvVaw0P9dkkl0Eloa-hQZ1FUnuW&ust=1686842994697000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCLj_3v2Jw_8CFQAAAAAdAAAAABAE
         <title>Gabriel</title>
    </head>
    <body>
          <h1>quem sou eu?</h1>
          <p>Meu nome é Gabriel Henrique Tomczyk tenho 16 anos e gosto de jogar bola</p>
          <img src="gabriel.png" alt="atlético">
+      
+      <link
+            <h1> uma lista do meus dribles favoritos </h1>
+    <OL TYPE= "I">
+        <LI> Drible da vaca </LI>
+        <LI> Pedalada </LI>
+        <LI> Chápeu e muito mais </LI>
+   </OL>
    </body>
 
 </html>
