--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
         <meta charset=''utf-8''>
         <meta name=''viewport'' content=width-device-width,initial-scale=1.0>
-        <link rel="shortcut icon" href=futebol.png
+        <link rel="shortcut icon" src="futebol.png"
         <title>Gabriel</title>
    </head>
    <body>
