--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <title>Gabriel</title>
    </head>
    <body>
-         <h1>quem sou eu?</h1>                                   <h1>DIA 28/07/2023</h1>
+         <h1>quem sou eu?</h1> 
+                                <h1>DIA 28/07/2023</h1>
          <p>Meu nome é Gabriel Henrique Tomczyk tenho 16 anos e gosto de jogar bola</p>
          <img src="gabriel.png" alt="atlético">
       
