--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
         <LI> Drible da vaca </LI>
         <LI> Pedalada </LI>
         <LI> Chápeu e muito mais </LI>
+            <h1> uma lista dos dias da semana</h1>
+    <OL TYPE="I">
+        <LI> segunda-feira </LI>
+        <LI> terça-feira </LI>
+        <LI> quarta-feira </LI>
+        <LI> quinta-feira </LI>
+        <LI> sexta-feira </LI>
+        <LI> sábado </LI>
+        <LI> domingo </LI>
    </OL>
    </body>
 
