--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <img src="gabriel.png" alt="atlético">
       
       <link
-            <h1> uma lista do meus dribles favoritos </h1>
+            <h1> uma lista dos dias da semana </h1>
     <OL TYPE= "I">
         <LI> segunda-feira </LI>
         <LI> terça-feira </LI>
