--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body>
          <h1>quem sou eu?</h1> <strong>DIA 28/07/2023</strong>
-         <p>Meu nome é Gabriel Henrique Tomczyk tenho 16 anos e gosto de jogar bola</p>
+         <p>diciplina progamação</p>
          <img src="gabriel.png" alt="atlético">
       
       <link
