--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Gabriel</title>
    </head>
    <body>
-         <h1>quem sou eu?</h1> <strong>DIA 28/07/2023</strong>
+         <h1>quem sou eu?</h1> 
          <p>diciplina progamação</p>
          <img src="gabriel.png" alt="atlético">
       
