--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <title>Gabriel</title>
    </head>
    <body>
-         <h1>quem sou eu?</h1> 
-         <p>diciplina progamação</p>
+         <h1>diciplina</h1> 
+         <p>progamação</p>
          <img src="gabriel.png" alt="atlético">
       
       <link
