--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <body>
          <h1>diciplina</h1> 
          <p>progamação</p>
-            <h1>28/07/2023</h1>
+            <h1>DIA 28/07/2023</h1>
          <img src="gabriel.png" alt="atlético">
       
       <link
