--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
          <h1>diciplina</h1> 
-         <p>progamação</p>
+         <p>progamação</p>"#0000FF"
             <p>DIA 28/07/2023</p>
          <img src="gabriel.png" alt="atlético">
       
