--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
          <h1>diciplina</h1> 
-         <p>progamação</p>"#0000FF"
+         <p>progamação</p>
             <p>DIA 28/07/2023</p>
          <img src="gabriel.png" alt="atlético">
       
@@ -20,6 +20,7 @@
         <LI> quinta-feira </LI>
         <LI> sexta-feira </LI>
         <LI> sábado </LI>
+        <p> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p>
         <LI> domingo </LI>
    </OL>
    </body>
