--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <LI> sexta-feira </LI>
         <LI> sábado </LI>
         <LI> domingo </LI>
-       <p> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p>
    </OL>
+          <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
+      <p> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p>
    </body>
 
 </html>
