--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <LI> sexta-feira </LI>
         <LI> sábado </LI>
         <LI> domingo </LI>
+        <p>DIA DA SEMANA QUE MAIS GOSTO</p>
+        <p> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p>
    </OL>
-            <h2>DIA DA SEMANA QUE MAIS GOSTO</h2>
-            <p> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p>
    </body>
 
 </html>
