--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <LI> sexta-feira </LI>
         <LI> sábado </LI>
         <LI> domingo </LI>
-        <p>DIA DA SEMANA QUE MAIS GOSTO</p>
-        <p> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p>
+        <p1>DIA DA SEMANA QUE MAIS GOSTO</p1>
+        <p2> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p2>
    </OL>
    </body>
 
