--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <LI> sábado </LI>
         <LI> domingo </LI>
         <p1>DIA DA SEMANA QUE MAIS GOSTO</p1>
-        <p2> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p2>
+        <p> SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</p>
    </OL>
    </body>
 
