--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <title>Gabriel</title>
    </head>
    <body>
-         <h1>diciplina</h1> 
-         <p>progamação</p>
+         <h1>diciplina progamação</h1> 
          <p>DIA 28/07/2023</p>
          <img src="gabriel.png" alt="atlético">
       
