--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
          <h1>diciplina progamação</h1> 
-         <p>DIA 28/07/2023</p>
+         <P>DIA 28/07/2023</P>
          <img src="gabriel.png" alt="atlético">
       
       <link
