--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <title>Gabriel</title>
    </head>
    <body>
-         <h1>diciplina progamação</h1> 
-         <P>DIA 28/07/2023</P>
+         <H1>DIA 28/07/2023</H1>
+         <P>diciplina progamação</P> 
+         <H1>DIA 28/07/2023</H1>
          <img src="gabriel.png" alt="atlético">
       
       <link
