--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Gabriel</title>
    </head>
    <body>
-         <H1>DIA 28/07/2023</H1>
+         <h1>DIA 28/07/2023</h1>
          <P>diciplina progamação</P> 
          <H1>DIA 28/07/2023</H1>
          <img src="gabriel.png" alt="atlético">
