--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <LI> domingo </LI>
             <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
+             <h1> periodos dos dias da semana</h1>
+        <LI> segunda-feira, MANHÃ TARDE E NOITE</LI>
    </OL>
    </body>
 
