--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
              <h1> periodos dos dias da semana</h1>
         <LI> segunda-feira, MANHÃ TARDE E NOITE</LI>
+        <LI> terça-feira, MANHÃ TARDE E NOITE</LI>
    </OL>
    </body>
 
