--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
             <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
              <h1> periodos dos dias da semana</h1>
-        <LI> segunda-feira, MANHÃ TARDE E NOITE</LI>
-        <LI> terça-feira, MANHÃ TARDE E NOITE</LI>
+        <LII> segunda-feira, MANHÃ, TARDE E NOITE</LII>
+        <LII> terça-feira, MANHÃ, TARDE E NOITE</LII>
+        <LII> quarta-feira, MANHÃ, TARDE E NOITE</LII>
+        <LII> quinta-feira, MANHÃ, TARDE E NOITE</LII>
+        <LII> sexta-feira, MANHÃ, TARDE E NOITE</LII>
+        <LII> sábado, MANHÃ TARDE E NOITE</LII>
+        <LII> domingo, MANHÃ, TARDE E NOITE </LII>
    </OL>
    </body>
 
