--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <LII> quarta-feira, MANHÃ, TARDE E NOITE</LII>
         <LII> quinta-feira, MANHÃ, TARDE E NOITE</LII>
         <LII> sexta-feira, MANHÃ, TARDE E NOITE</LII>
-        <LII> sábado, MANHÃ TARDE E NOITE</LII>
+        <LII> sábado, MANHÃ, TARDE E NOITE</LII>
         <LII> domingo, MANHÃ, TARDE E NOITE </LII>
    </OL>
    </body>
