--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
         <LI> sexta-feira </LI>
         <LI> sábado </LI>
         <LI> domingo </LI>
+   </OL>
+
+   <OL>
             <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
              <h1> periodos dos dias da semana</h1>
-        <LII> segunda-feira, MANHÃ, TARDE E NOITE</LII>
-        <LII> terça-feira, MANHÃ, TARDE E NOITE</LII>
-        <LII> quarta-feira, MANHÃ, TARDE E NOITE</LII>
-        <LII> quinta-feira, MANHÃ, TARDE E NOITE</LII>
-        <LII> sexta-feira, MANHÃ, TARDE E NOITE</LII>
-        <LII> sábado, MANHÃ, TARDE E NOITE</LII>
-        <LII> domingo, MANHÃ, TARDE E NOITE </LII>
+        <LI> segunda-feira, MANHÃ, TARDE E NOITE</LI>
+        <LI> terça-feira, MANHÃ, TARDE E NOITE</LI>
+        <LI> quarta-feira, MANHÃ, TARDE E NOITE</LI>
+        <LI> quinta-feira, MANHÃ, TARDE E NOITE</LI>
+        <LI> sexta-feira, MANHÃ, TARDE E NOITE</LI>
+        <LI> sábado, MANHÃ, TARDE E NOITE</LI>
+        <LI> domingo, MANHÃ, TARDE E NOITE </LI>
    </OL>
    </body>
 
