--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
              <h1> periodos dos dias da semana</h1>
-        <LI> segunda-feira, MANHÃ, TARDE E NOITE</LI>
-        <LI> terça-feira, MANHÃ, TARDE E NOITE</LI>
-        <LI> quarta-feira, MANHÃ, TARDE E NOITE</LI>
-        <LI> quinta-feira, MANHÃ, TARDE E NOITE</LI>
-        <LI> sexta-feira, MANHÃ, TARDE E NOITE</LI>
-        <LI> sábado, MANHÃ, TARDE E NOITE</LI>
-        <LI> domingo, MANHÃ, TARDE E NOITE. </LI>
+        <LI> segunda-feira, MANHÃ, TARDE E NOITE </LI>
+        <LI> terça-feira, MANHÃ, TARDE E NOITE </LI>
+        <LI> quarta-feira, MANHÃ, TARDE E NOITE </LI>
+        <LI> quinta-feira, MANHÃ, TARDE E NOITE </LI>
+        <LI> sexta-feira, MANHÃ, TARDE E NOITE </LI>
+        <LI> sábado, MANHÃ, TARDE E NOITE </LI>
+        <LI> domingo, MANHÃ, TARDE E NOITE </LI>
    </OL>
    </body>
 
