--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <LI> sábado </LI>
         <LI> domingo </LI>
   </OL>  
-      
+            <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
+               <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
+             <h1> periodos dos dias da semana</h1>
    <OL> TYPE= "I">
             <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
