--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <LI> quinta-feira, MANHÃ, TARDE E NOITE </LI>
           <LI> sexta-feira, MANHÃ, TARDE E NOITE </LI>
           <LI> sábado, MANHÃ, TARDE E NOITE </LI>
-          <LI> domingo, MANHÃ, TARDE E NOITE. </LI>
+          <LI> domingo, MANHÃ, TARDE E NOITE </LI>
    </OL>
    </body>
 
