--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
             <h1> uma lista dos dias da semana </h1>
 
    <OL TYPE= "I">
-          <LI> segunda-feira </LI>
-          <LI> terça-feira </LI>
-          <LI> quarta-feira </LI>
-          <LI> quinta-feira </LI>
-          <LI> sexta-feira </LI>
-          <LI> sábado </LI>
-          <LI> domingo </LI>
+                <LI> segunda-feira </LI>
+                <LI> terça-feira </LI>
+                <LI> quarta-feira </LI>
+                <LI> quinta-feira </LI>
+                <LI> sexta-feira </LI>
+                <LI> sábado </LI>
+                <LI> domingo </LI>
    </OL>  
             <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
              <h1> periodos dos dias da semana</h1>
       
-   <OL> TYPE= "I">
-          <LI> segunda-feira, MANHÃ, TARDE E NOITE </LI>
-          <LI> terça-feira, MANHÃ, TARDE E NOITE </LI>
-          <LI> quarta-feira, MANHÃ, TARDE E NOITE </LI>
-          <LI> quinta-feira, MANHÃ, TARDE E NOITE </LI>
-          <LI> sexta-feira, MANHÃ, TARDE E NOITE </LI>
-          <LI> sábado, MANHÃ, TARDE E NOITE </LI>
-          <LI> domingo, MANHÃ, TARDE E NOITE </LI>
+   <OL TYPE= "I">
+                <LI> segunda-feira, MANHÃ, TARDE E NOITE </LI>
+                <LI> terça-feira, MANHÃ, TARDE E NOITE </LI>
+                <LI> quarta-feira, MANHÃ, TARDE E NOITE </LI>
+                <LI> quinta-feira, MANHÃ, TARDE E NOITE </LI>
+                <LI> sexta-feira, MANHÃ, TARDE E NOITE </LI>
+                <LI> sábado, MANHÃ, TARDE E NOITE </LI>
+                <LI> domingo, MANHÃ, TARDE E NOITE </LI>
    </OL>
    </body>
 
