--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <title>Gabriel</title>
    </head>
    <body>
-             <p>meu nome é biel</p> 
-         <h1>DIA 28/07/2023</h1>
+         <h1>programação (matematica II)</h1>
              <P>diciplina progamação</P>
          <img src="gabriel.png" alt="atlético">
             <h1> uma lista dos dias da semana </h1>
