--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Gabriel</title>
    </head>
    <body>
-         <h1>programação (matematica II)</h1>
+         <h1><Mark style="barckgrand-blue> programação (matematica II)</h1></Mark>
             <h1>exercício 3 segundo trimestre</h1>
 
    <OL TYPE= "I">
