--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
          <h1><Mark style="barckgrand-blue> programação (matematica II)</h1></Mark>
-            <h1>exercício 3 segundo trimestre</h1>
+            <h1><Mark style="barckgrand-red>exercício 3 segundo trimestre</h1></mark>
 
    <OL TYPE= "I">
                 <LI> segunda-feira </LI>
