--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <p><Mark style="barckgrand-red>exercício 3 segundo trimestre</p></mark>
 
    <OL TYPE= "I">
-                <LI> segunda-feira </LI>
+                <LI> o que eu fiz nos sábados </LI>
                 <LI> terça-feira </LI>
                 <LI> quarta-feira </LI>
                 <LI> quinta-feira </LI>
