--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
             <p><Mark style="barckgrand-red> Exercicio 3 segundo trimestre</p></mark>
 
    <OL TYPE= "I">
-                <LI> o que eu fiz nos sábados </LI>
-   
-                <LI> terça-feira </LI>
-                <LI> quarta-feira </LI>
-                <LI> quinta-feira </LI>
+               <h1> Dias da semana que mais gosto </h1>
                 <LI> sexta-feira </LI>
                 <LI> sábado </LI>
                 <LI> domingo </LI>
