--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
          <h1><Mark style="barckgrand-blue> programação (matematica II)</h1></Mark>
-            <p><Mark style="barckgrand-red> Exercicio 3 segundo trimestre</p></mark>
+            <h2><Mark style="barckgrand-red> Exercicio 3 segundo trimestre</h2></mark>
 
    <OL TYPE= "I">
                <h1> Dias da semana que mais gosto </h1>
