--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
    <OL TYPE= "I">
                <h1> Dias da semana que mais gosto </h1>
-                <LI> sexta-feira </LI>
-                <LI> sábado </LI>
-                <LI> domingo </LI>
+                <LI> <img src "imagem.png alt"="texto alternativo> sexta-feira </LI>
+                <LI> <img src "imagem.png alt"="texto alternativo> sábado </LI>
+                <LI> <img src "imagem.png alt"="texto alternativo> domingo </LI>
    </OL>  
             <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
