--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <LI> <img src "futebol.png alt> sábado </LI>
                 <LI> <img src "futebol.png alt> domingo </LI>
    </OL>  
-            <h1>DIA DA SEMANA QUE MAIS GOSTO</h1>
+            <h1>DIA DA SEMANA QUE MAIS. GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
              <h1> periodos dos dias da semana</h1>
       
