--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
    <OL TYPE= "I">
                <h1> Dias da semana que mais gosto </h1>
-                <LI> <img src "futebol.png alt> sexta-feira </LI>
-                <LI> <img src "futebol.png alt> sábado </LI>
-                <LI> <img src "futebol.png alt> domingo </LI>
+                <LI> <img src "futebol.png" alt> sexta-feira </LI>
+                <LI> <img src "futebol.png" alt> sábado </LI>
+                <LI> <img src "futebol.png" alt> domingo </LI>
    </OL>  
             <h1>DIA DA SEMANA QUE MAIS.GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
