--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
              <h1> periodos dos dias da semana</h1>
       
-   <OL TYPE= "I">
-                <LI> segunda-feira, MANHÃ, TARDE E NOITE </LI>
-                <LI> terça-feira, MANHÃ, TARDE E NOITE </LI>
-                <LI> quarta-feira, MANHÃ, TARDE E NOITE </LI>
-                <LI> quinta-feira, MANHÃ, TARDE E NOITE </LI>
-                <LI> sexta-feira, MANHÃ, TARDE E NOITE </LI>
-                <LI> sábado, MANHÃ, TARDE E NOITE </LI>
-                <LI> domingo, MANHÃ, TARDE E NOITE </LI>
+   <OL TYPE= "a">
+                <La> segunda-feira, MANHÃ, TARDE E NOITE </La>
+                <La> terça-feira, MANHÃ, TARDE E NOITE </La>
+                <La> quarta-feira, MANHÃ, TARDE E NOITE </La>
+                <La> quinta-feira, MANHÃ, TARDE E NOITE </La>
+                <La> sexta-feira, MANHÃ, TARDE E NOITE </La>
+                <La> sábado, MANHÃ, TARDE E NOITE </La>
+                <La> domingo, MANHÃ, TARDE E NOITE </La>
    </OL>
    </body>
 
