--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
          <h1><Mark style="barckgrand-blue> programação (matematica II)</h1></Mark>
             <h2><Mark style="barckgrand-red> Exercicio 3 segundo trimestre</h2></Mark>
 
-   <OL TYPE= "I">
+   <OL TYPE= ".">
                <h1> Dias da semana que mais gosto </h1>
-                <LI> <img src "futebol.png" alt> sexta-feira </LI>
-                <LI> <img src "futebol.png" alt> sábado </LI>
-                <LI> <img src "futebol.png" alt> domingo </LI>
+                <L.> <img src "futebol.png" alt> sexta-feira </L.>
+                <L.> <img src "futebol.png" alt> sábado </L.>
+                <L.> <img src "futebol.png" alt> domingo </L.>
    </OL>  
             <h1>DIA DA SEMANA QUE MAIS.GOSTO</h1>
                <h1>SÁBADO É O DIA QUE MAIS GOSTO POR QUE JOGO BOLA</h1>
