--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Barbearia </title>
    </head>
    <body>
-        <h1> O BARBA </h1>
+        <h1> BARBEARIA GTG </h1>
         <OL TYPE= "I">
                      <OL> </OL>
                         
