--- a/index.html
+++ b/index.html
@@ -1,43 +1,88 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
+		<title>Barbearia alura</title>
 
-p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1.7em;
-}
+		<link rel="stylesheet" href="reset.css">
+		<link rel="stylesheet" href="style.css">
+		
+	</head>
 
-p.pequeno {
-    font-size: 1.1em;
-    color: rgb(139, 138, 138);
-}
+	<body>
+		<header>
+			<div class="caixa">
+				<h1><img src="logo.png"></h1>
 
-#segundo {
-    font-size: 2.3em;
-    font-weight: bolder;
-}
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contatos.html">Contatos</a></li>
+						<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+					</ul>
+				</nav>
+			</div>
+		</header>
 
-div#inscreva-se >div#broxa > h2 {
-    font-size: 1.8em;
-    font-weight: bold;
-    color: rgb(100, 99, 99);
-    font-size: 1.7em;
-}
+			<img class="banner" src="banner.jpg">
 
-a#botao:hover {
-    background-color: rgb(104, 250, 104);   
-    color: black;
-}
+		<main>
 
-div#ultimo > p {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.3em;
-    color: rgb(255, 255, 255);
-    padding: 5px;
-}
-@media(max-width: 700px) and (min-width:360px) {
-    body {
-        background-image: url(imagens/pexels-hicret-16954026.jpg);
-        background-repeat: no-repeat;
-        background-size: cover;
+			<section class="principal">
+				<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro">
+
+				<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+				<p id="missao" ><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+				<P>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</P>
+			</section>
+
+			<section class="mapa">
+					<h3 class="titulo-principal">Nosso estabelecimento</h3>
+					<p>Nosso estabalecimento está localizado no coração da cidade.</p>
+				<div class="mapa-conteudo">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.448598130907!2d-46.634653385542414!3d-23.588239368469353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Escola%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1580916426151!5m2!1spt-BR!2sbr" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+				</div>
+			</section>
+
+			<section class="beneficios">
+				<h3 class="titulo-principal">benefícíos</h3>
+
+			 <div class="conteudo-beneficios">
+				<ul class="lista-beneficios">
+
+					<li class="itens">Atendimento ao cliente</li>
+					<li class="itens">Espaço diferenciado</li>
+					<li class="itens">Localização</li>
+					<li class="itens">profissionais qualificado</li>
+					<li class="itens">Pontualidae</li>
+					<li class="itens">Limpeza</li>
+				</ul><img src="beneficios.jpg" class="imagem-beneficios">
+			</div>
+
+
+				<div class="video">
+
+						<iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+				</div>
+			</section>
+		</main>
+
+		<footer>
+    			<img src="logo-branco.png" alt="Logo da barbearia Alura">
+   	 			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+			</footer>
+	</body>
+	
+</html>
+
+
+
+
+
