--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		</main>
 
 		<footer>
-    		<img src="logo-branco.png">
-   	 		<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
+    		<img src="banner.jpg">
+   	 		
 		</footer>
 		
 	</body>
