--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 			<section class="mapa">
 					<h3 class="titulo-principal">Nosso estabelecimento</h3>
-					<p>Nosso estabalecimento está localizado no coração da cidade.</p>
+					<p>Onde nosso estabelecimento está localizado.</p>
 				<div class="mapa-conteudo">
 					<iframe src="-25.5242029567309, -49.300711088272834=""></iframe>
 				</div>
