--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					<h3 class="titulo-principal">Nosso estabelecimento</h3>
 					<p>Onde nosso estabelecimento está localizado.</p>
 				<div class="mapa-conteudo">
-					<iframe src="-25.5242029567309, -49.300711088272834=""></iframe>
+					<iframe https://maps.app.goo.gl/ePRqLMx6HD9wku729=""></iframe>
 				</div>
 			</section>
 
