--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
 			</div>
 		</header>
 
-			<img class="banner" src="banner.jpg">
+			<img class="banner" src="banner.jpg">}
+
+/* css da pagina inicial */
+.banner {
+	width: 100%;
+}
 
 		<main>
 
