--- a/index.html
+++ b/index.html
@@ -67,7 +67,18 @@
 					<li class="itens">profissionais qualificado</li>
 					<li class="itens">Pontualidae</li>
 					<li class="itens">Limpeza</li>
-				</ul><img src="beneficios.jpg" class="imagem-beneficios">
+				</ul><img src="beneficios.jpg" class="imagem-beneficios"}
+
+.imagem-beneficios {
+	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px #000000;
+}
+
+.imagem-beneficios:hover {
+ 	opacity: 0.3;
+}>
 			</div>
 
 
