--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 		<main>
 
 			<section class="principal">
-				<h2 class="titulo-principal">Sobre a Barbearia Dumon</h2>
+				<h2 class="titulo-principal".titulo-principal {
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;>Sobre a Barbearia Dumon</h2>
 
 				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro">
 
