--- a/index.html
+++ b/index.html
@@ -33,17 +33,9 @@
 		<main>
 
 			<section class="principal">
-				<h2 class="titulo-principal".titulo-principal {
-	text-align: center;
-	font-size: 2em;
-	margin: 0 0 1em;
-	clear: left;>Sobre a Barbearia Dumon</h2>
+				<h2 class="titulo-principal">Sobre a Barbearia Dumon</h2>
 
-				<img class="utensilios"{
-	width: 120px;
-	float: left;
-	margin: 0 20px 20px 0;
-} src="utensilios.jpg" alt="Utensilios de um barbeiro">
+				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro">
 
 				<p>Localizada no coração da cidade a <strong>Barbearia Dumon</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. A Barbearia Dumon já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
