--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
    	 			
 			</footer>
 		
+	</body>
 	</body>body{
 	 font-family: 'Montserrat', sans-serif;
 	 
@@ -351,7 +352,8 @@ td, th {
    .lista-beneficios, .imagem-beneficios{
    	width: 100%;
    }
-}
+}</body>
+	 
 	
 </html>
 
