--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="DUMON.png"></h1>
+				<h1><img src="logo__2_-removebg-preview-fotor-2023112964150.png"></h1>
 
 				<nav>
 					<ul>
