--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</main>
 
 		<footer>
-    			<img src="DUMON.png" alt="Logo da barbearia Alura">
+    			<img src="logo__2_-removebg-preview-fotor-2023112964150.png" alt="Logo da barbearia Alura">
    	 			
 			</footer>
 		
