--- a/contatos.html
+++ b/contatos.html
@@ -2,7 +2,7 @@ head>
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png" alt="Logo da barbearia Alura"></h1>
+				<h1><img src="logo__2_-removebg-preview-fotor-2023112964150.png" alt="Logo da barbearia Alura"></h1>
 
 				<nav>
 					<ul>
