--- a/contatos.html
+++ b/contatos.html
@@ -85,7 +85,7 @@
 		</main>
 
 			<footer>
-    			<img src="logo-branco.png" alt="Logo da barbearia Alura">
+    			<img src="logo__2_-removebg-preview-fotor-2023112964150.png" alt="Logo da barbearia Alura">
    	 	
 			</footer>
 		
