--- a/produtos.html
+++ b/produtos.html
@@ -9,7 +9,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src=""></h1>
+				<h1><img src="logo__2_-removebg-preview-fotor-2023112964150.png"></h1>
 
 				<nav>
 					<ul>
