--- a/produtos.html
+++ b/produtos.html
@@ -29,7 +29,7 @@
 					<p class="produtos-preco">R$ 25,00</p>
 				</li>
 				<li><h2>Barba</h2>
-					<img src="./Produtos - Barbearia Alura_files/barba.jpg">
+					<img src="barba.jpg">
 					<p class="produtos-descricao">Corte e desenho profisional de barba</p>
 					<p class="produtos-preco">R$ 18,00</p>
 				</li>
