--- a/produtos.html
+++ b/produtos.html
@@ -24,7 +24,7 @@
 		<main>
 			<ul class="produtos">
 				<li><h2>Cabelo</h2>
-					<img src="cabelo {1}.png">
+					<img src="cabelo.png">
 					<p class="produtos-descricao">Na tesoura ou máquina,como o cliente prefirir</p>
 					<p class="produtos-preco">R$ 25,00</p>
 				</li>
@@ -34,7 +34,7 @@
 					<p class="produtos-preco">R$ 18,00</p>
 				</li>
 				<li><h2>Cabelo + Barba</h2>
-					<img src="./Produtos - Barbearia Alura_files/cabelo+barba.jpg">
+					<img src="cabelo+barba.jpg">
 					<p class="produtos-descricao">Pacote completo de cabelo e barba</p>
 					<p class="produtos-preco">R$ 35,00</p>
 				</li>
