--- a/produtos.html
+++ b/produtos.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0046)file:///C:/Users/gabri/Downloads/produtos.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
-		<title> Produtos - Barbearia Alura</title>
+		<title> Produtos - Barbearia Dumon</title>
 		<link rel="stylesheet" href="./Produtos - Barbearia Alura_files/reset.css">
 		<link rel="stylesheet" href="./Produtos - Barbearia Alura_files/style.css">
 	<style type="text/css" id="operaUserStyle"></style></head>
