--- a/produtos.html
+++ b/produtos.html
@@ -24,7 +24,7 @@
 		<main>
 			<ul class="produtos">
 				<li><h2>Cabelo</h2>
-					<img src="cabelo.png">
+					<img src="cabelo.jpg">
 					<p class="produtos-descricao">Na tesoura ou máquina,como o cliente prefirir</p>
 					<p class="produtos-preco">R$ 25,00</p>
 				</li>
