--- a/produtos.html
+++ b/produtos.html
@@ -13,9 +13,9 @@
 
 				<nav>
 					<ul>
-						<li><a href="file:///C:/Users/gabri/Downloads/index.html">Home</a></li>
-						<li><a href="file:///C:/Users/gabri/Downloads/produtos.html">Produtos</a></li>
-						<li><a href="file:///C:/Users/gabri/Downloads/contatos.html">Contatos</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="produtos.html">Produtos</a></li>
+						<li><a href="contatos.html">Contatos</a></li>
 					</ul>
 				</nav>
 			</div>
