--- a/index.html
+++ b/index.html
@@ -1,86 +1,55 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<title>Barbearia Dumon</title>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Donut House</title>
+</head>
+<body>
+    <div class="donuts-background">
+        <img class="background-img" src="imgs/donuts-background.jpeg" alt="">
 
-		<link rel="stylesheet" href="reset.css">
-		<link rel="stylesheet" href="style.css">
-		
-	</head>
+        <div class="donuts">
+            <h1>Donuts</h1>
+            <img class="radius-donut" src="imgs/radius-donut.jpeg" alt="">
+        </div>
 
-	<body>
-		<header>
-			<div class="caixa">
-				<h1><img src="logo__2_-removebg-preview-fotor-2023112964150.png"></h1>
+        <div class="donuts best-donuts">
+            <h2>Os Melhores Donuts</h2>
+        </div>
 
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="produtos.html">Produtos</a></li>
-						<li><a href="contatos.html">Contatos</a></li>
-						<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-					</ul>
-				</nav>
-			</div>
-		</header>
+        <p class="paragraph-lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quaerat laboriosam alias obcaecati fugit? Eveniet delectus alias repellat? Nisi temporibus quia fugiat vitae recusandae sunt consequatur qui distinctio, quas ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique ipsam maxime harum animi eius reprehenderit voluptates aperiam eveniet laboriosam? Nobis aliquid animi qui vero asperiores non ipsam eos cum?</p>
 
-			<img class="banner" src="banner.jpg">
+        <div class="donuts best-donuts options">
+            <h2>OPÇÕES</h2>
+        </div>
 
+        <div class="option-donut">
 
+            <ul>
+                <li class="option-item">
+                    <h3>Opção 1</h3>
+                    <img class="op-donuts" src="imgs/option-donut.jpg" alt="">
+                </li>
+                
+                <li class="option-item">
+                    <h3>Opção 2</h3>
+                    <img class="op-donuts" src="imgs/option-donut.jpg" alt="">
+                </li>
 
-		<main>
+                <li class="option-item">
+                    <h3>Opção 3</h3>
+                    <img class="op-donuts" src="imgs/option-donut.jpg" alt="">
+                </li>
 
-			<section class="principal">
-				<h2 class="titulo-principal">Sobre a Barbearia Dumon</h2>
+            </ul>
 
-				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de um barbeiro">
+        </div>
 
-				<p>Localizada no coração da cidade a <strong>Barbearia Dumon</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. A Barbearia Dumon já é destaque na cidade e conquista novos clientes a cada dia.</p>
+    </div>
 
-				<p id="missao" ><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
-
-				<P>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</P>
-			</section>
-
-			<section class="mapa">
-					<h3 class="titulo-principal">Nosso estabelecimento</h3>
-					<p>Onde nosso estabelecimento está localizado.</p>
-				<div class="mapa-conteudo">
-					<iframe https:https://maps.app.goo.gl/1UL8PJjsAmRmoU9T7></iframe>
-				</div>
-			</section>
-
-			<section class="beneficios">
-				<h3 class="titulo-principal">benefícíos</h3>
-
-			 <div class="conteudo-beneficios">
-				<ul class="lista-beneficios">
-
-					<li class="itens">Atendimento ao cliente</li>
-					<li class="itens">Espaço diferenciado</li>
-					<li class="itens">Localização</li>
-					<li class="itens">profissionais qualificado</li>
-					<li class="itens">Pontualidae</li>
-					<li class="itens">Limpeza</li>
-				</ul><img src="beneficios.jpg" class="imagem-beneficios"
-
-			</div>
-
-
-				<div class="video">
-
-				</div>
-			</section>
-		</main>
-
-		<footer>
-    			<img src="logo__2_-removebg-preview-fotor-2023112964150.png" alt="Logo da barbearia Alura">
-   	 			
-			</footer>
-		
-	</body>
+</body>
 </html>
 
 
