--- a/index.html
+++ b/index.html
@@ -1,56 +1,57 @@
+salvee
+KKKKKKKKKKKK
+Pia pior que não dá, minha mãe não quer que eu sai pq to mau
+To com febre e enjoo
+Por isso não fui hoje
+Vlw pia, eu estou melhor já, estava pior ontem
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Donut House</title>
+    <title>A Rosa de Hiroxima</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            margin: 20px;
+            padding: 20px;
+            border-radius: 8px;
+            max-width: 600px;
+            margin: auto;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #6a1b9a;
+        }
+        p {
+            line-height: 1.6;
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
-    <div class="donuts-background">
-        <img class="background-img" src="imgs/donuts-background.jpeg" alt="">
-
-        <div class="donuts">
-            <h1>Donuts</h1>
-            <img class="radius-donut" src="imgs/radius-donut.jpeg" alt="">
-        </div>
-
-        <div class="donuts best-donuts">
-            <h2>Os Melhores Donuts</h2>
-        </div>
-
-        <p class="paragraph-lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quaerat laboriosam alias obcaecati fugit? Eveniet delectus alias repellat? Nisi temporibus quia fugiat vitae recusandae sunt consequatur qui distinctio, quas ducimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique ipsam maxime harum animi eius reprehenderit voluptates aperiam eveniet laboriosam? Nobis aliquid animi qui vero asperiores non ipsam eos cum?</p>
-
-        <div class="donuts best-donuts options">
-            <h2>OPÇÕES</h2>
-        </div>
-
-        <div class="option-donut">
-
-            <ul>
-                <li class="option-item">
-                    <h3>Opção 1</h3>
-                    <img class="op-donuts" src="imgs/option-donut.jpg" alt="">
-                </li>
-                
-                <li class="option-item">
-                    <h3>Opção 2</h3>
-                    <img class="op-donuts" src="imgs/option-donut.jpg" alt="">
-                </li>
-
-                <li class="option-item">
-                    <h3>Opção 3</h3>
-                    <img class="op-donuts" src="imgs/option-donut.jpg" alt="">
-                </li>
-
-            </ul>
-
-        </div>
-
-    </div>
-
+    <h1>A Rosa de Hiroxima</h1>
+    <p>Rio de Janeiro, 1954</p>
+    <p>Pensem nas crianças<br>
+    Mudas telepáticas<br>
+    Pensem nas meninas<br>
+    Cegas inexatas<br>
+    Pensem nas mulheres<br>
+    Rotas alteradas<br>
+    Pensem nas feridas<br>
+    Como rosas cálidas<br>
+    Mas oh não se esqueçam<br>
+    Da rosa da rosa<br>
+    Da rosa de Hiroxima<br>
+    A rosa hereditária<br>
+    A rosa radioativa<br>
+    Estúpida e inválida<br>
+    A rosa com cirrose<br>
+    A antirrosa atômica<br>
+    Sem cor sem perfume<br>
+    Sem rosa sem nada.</p>
 </body>
 </html>
-
-
-
