--- a/index.html
+++ b/index.html
@@ -3,29 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Rosa de Hiroxima</title>
+    <title> eu te amo meu amor </title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            color: #333;
-            margin: 20px;
-            padding: 20px;
-            border-radius: 8px;
-            max-width: 600px;
-            margin: auto;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            text-align: center;
-            color: #6a1b9a;
-        }
-        p {
-            line-height: 1.6;
-            margin: 10px 0;
-        }
-    </style>
-</head>
+      
 <body>
     <h1>A Rosa de Hiroxima</h1>
     <p>Rio de Janeiro, 1954</p>
