--- a/index.html
+++ b/index.html
@@ -1,31 +1,50 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> eu te amo meu amor </title>
+    <title>te vivo amor!</title>
     <style>
-      
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, #ffecd2, #fcb69f);
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            text-align: center;
+        }
+        .container {
+            max-width: 600px;
+            background: rgba(255, 255, 255, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+        h1 {
+            font-size: 2.5em;
+            color: #e74c3c;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 1.2em;
+            line-height: 1.6;
+        }
+    </style>
+</head>
 <body>
-    <h1>A Rosa de Hiroxima</h1>
-    <p>Rio de Janeiro, 1954</p>
-    <p>Pensem nas crianças<br>
-    Mudas telepáticas<br>
-    Pensem nas meninas<br>
-    Cegas inexatas<br>
-    Pensem nas mulheres<br>
-    Rotas alteradas<br>
-    Pensem nas feridas<br>
-    Como rosas cálidas<br>
-    Mas oh não se esqueçam<br>
-    Da rosa da rosa<br>
-    Da rosa de Hiroxima<br>
-    A rosa hereditária<br>
-    A rosa radioativa<br>
-    Estúpida e inválida<br>
-    A rosa com cirrose<br>
-    A antirrosa atômica<br>
-    Sem cor sem perfume<br>
-    Sem rosa sem nada.</p>
+    <div class="container">
+        <h1>A história do meu verdadeiro amor</h1>
+        <p>
+            um amor verdade não se procura, ele aparece do nada!
+            eu ja tive varios amores, amores de escola, amores de crianca, porem você foi meu amor verdadeiro.
+            tudo comesou na praia. Eu era viciado em conputador, e tinha uma menina que a familia dela era muito amiga da minha, e sempre que eu avistava
+            essa menina 
+            
+        </p>
+    </div>
 </body>
 </html>
