--- a/index.html
+++ b/index.html
@@ -41,8 +41,18 @@
         <p>
             um amor verdade não se procura, ele aparece do nada!
             eu ja tive varios amores, amores de escola, amores de crianca, porem você foi meu amor verdadeiro.
-            tudo comesou na praia. Eu era viciado em conputador, e tinha uma menina que a familia dela era muito amiga da minha, e sempre que eu avistava
-            essa menina 
+            tudo comesou na praia. Eu era viciado em conputador e tinha uma menina que a familia dela era muito amiga da minha, e sempre que eu avistava essa menina eu ficava paralizado com sua beleza,
+            meu coração parava e eu ficava com muita vergonha, isso desde criança, eu sempre avistava ela e sempre ficava com meu coraçãozinho na mão, fui crecesendo, o tempo foi passando os anos indo
+            como o vento, e eu de um lado não dando certo com ninguem e ela do outro lado se decepicionado com seus amores e ganhando  muita insegurança.
+            Então nossa familia sempra ia começo de ano para praia e meu pai convidavam todos nossos parentes, inclusive a menina que eu achava linda sempre ia para praia junto da minha tia, e eu nem 
+            chegava perto dela poque eu morria de vergonha por não me achar o suficiente, porém no ano de 2024 toda essa história mudou, eu após anos amadureci e comecei a tomar atidudes...
+            eu não estava procurando ninguém na época, mas como ela foi sempre a unica que fazia meu corpo congelar ao vela, então descidi começar a tomar atitudes, começamos a nos encarar na praia. Sem
+            nem perceber começamos a sair mais. eu comecei a chegar mais perto dela, mas sem tentar assustala, após vários dias na praia eu descidi sair com ela na praia para andar e eu finalmente tomar 
+            atitude e beijar ela, comecei a fazer umas perguntas para ela, porque assim como ela eu também tinha lgumas inseguranças, então apos uma caminhada e uma longa conversa sentamos em um banco
+            enscima do morrinho que tinha ali perto, ela me olhando pensando se eu ia beijar ela ou não, e eu todo bobinho com mt vergonha e com borboletas na barriga para beijar ela, enão eu simplesmente
+            vensci minha vergonha e beijei ela...
+            quando eu a beijei, meu corpo arrepiou e eu fui parar no céu, foi igual a cena de novela, enfrente ao mar beijei ela e foi o melhor beijo da minha vida, após o beijo começamos a rir de um cara
+            que estava ao lado mijando no mato
             
         </p>
     </div>
