--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         h1 {
             text-align: center;
             font-size: 2.5em;
-            color: #ffd700;
+            color: #00bfff;
         }
         p {
             line-height: 1.8;
             font-size: 1.2em;
         }
         .highlight {
-            color: #ffd700;
+            color: #00bfff;
             font-weight: bold;
         }
         footer {
